add class Quotes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
         <p>“The Bible will always be full of things you cannot understand, as long as you will not live according to
           those you can understand.”</p>
           --Stephen R. Covey,
+          <p *ngFor='let quote of quotes'>
+            {{quote}}
+          </p>
       </div>
     </div>
     <div class="col-md-6"></div>
