--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,1 @@
-<div class="container">
-  <h1 class="text-center bg-primary">My Quotes</h1>
-  <hr>
-  <div class="row">
-    <div class="col-md-6">
-      <div class="card">
-        <p>“The Bible will always be full of things you cannot understand, as long as you will not live according to
-          those you can understand.”</p>
-          --Stephen R. Covey,
-          <p *ngFor='let quote of quotes'>
-            {{quote}}
-          </p>
-      </div>
-    </div>
-    <div class="col-md-6"></div>
-  </div>
-</div>
+<app-quote></app-quote>
