add box shadow to quote card

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -8,7 +8,7 @@
     <hr>
     <div class="row">
       <div class="col-md-6">
-        <div *ngFor='let quote of quotes' class="card">
+        <div *ngFor='let quote of quotes' class="card shadow-lg p-3 mb-3 bg-body rounded">
             <p >
               {{quote.quote}} <br>
               {{quote.author}} <br>
