--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -16,7 +16,9 @@
             </p>
         </div>
       </div>
-      <div class="col-md-6"></div>
+      <div class="col-md-6">
+        <app-quote-form></app-quote-form>
+      </div>
     </div>
   </div>
   
