--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,3 +1,12 @@
+<style>
+    form{
+        padding: 2%;
+    }
+    label{
+        margin-bottom: 1%;
+        margin-top: 1%;
+    }
+</style>
 <div>
   <h2>Add new Goal</h2>
   <hr>
