--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -3,26 +3,38 @@
     padding: 20px;
   }
 
+  main {
+    margin: 10%;
+    margin-top: 0%;
+
+  }
+  .col-md-7{
+    padding: 6%;
+    padding-top: 1%;
+
+  }
   .container>h1 {
     padding: 2%;
   }
 
 </style>
-<div class="container">
-  <h1 class="text-center">My Quotes</h1>
-  <hr>
-  <div class="row">
-    <div class="col-md-6">
-      <div *ngFor='let quote of quotes' class="card shadow-lg p-3 mb-3 bg-body rounded">
-        <p>
-          {{quote.quote}} <br>
-          {{quote.author}} <br>
-          {{quote.upvote}} {{quote.downvote}}
-        </p>
+<main>
+  <div class="container">
+    <h1 class="text-center">My Quotes</h1>
+    <hr>
+    <div class="row">
+      <div class="col-md-5">
+        <app-quote-form></app-quote-form>
+      </div>
+      <div class="col-md-7">
+        <div *ngFor='let quote of quotes' class="card shadow-lg p-3 mb-3 bg-body rounded">
+          <p>
+            {{quote.quote}} <br>
+            {{quote.author}} <br>
+            {{quote.upvote}} {{quote.downvote}}
+          </p>
+        </div>
       </div>
     </div>
-    <div class="col-md-6">
-      <app-quote-form></app-quote-form>
-    </div>
   </div>
-</div>
+</main>
