--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -31,6 +31,7 @@
           <p>
             {{quote.quote}} <br>
             {{quote.author}} <br>
+            {{quote.submittedBy}}<br>
             {{quote.upvote}} {{quote.downvote}}
           </p>
         </div>
