--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -21,6 +21,10 @@
       <label for="name">Author</label>
       <input type="text" class="form-control" id="author" name="author" required>
     </div>
+    <div class="form-group">
+        <label for="name">Submitted By</label>
+        <input type="text" class="form-control" id="submittedBy" name="submittedBy" required>
+      </div>
     <button type="submit" class="btn btn-success">Add Goal</button>
   </form>
 </div>
