//add input import for Quotes class to allow input prop binding

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -34,6 +34,8 @@
             {{quote.submittedBy}}<br>
             {{quote.upvote}} {{quote.downvote}}
           </p>
+          <app-quote-details></app-quote-details>
+
         </div>
       </div>
     </div>
