highlight sample text in parent component

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -31,7 +31,9 @@
             {{quote.quote}} <br>
             {{quote.author}} <br>
             {{quote.submittedBy}}<br>
-          </p>
+        </p>
+        <p appHighlight>Highlight me!</p>
+
           <app-quote-details [quote]='quote'></app-quote-details>
         </div>
       </div>
