add template reference

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -19,7 +19,7 @@ input{
 <div class="form">
   <h2>Add new Goal</h2>
   <hr>
-  <form>
+  <form #quotesForm ='ngForm'>
     <div class="form-group">
       <label for="name">Quote:</label>
       <textarea class="form-control" id="quote" rows="4" name="quote" required></textarea>
