--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -22,15 +22,15 @@ input{
   <form #quotesForm ='ngForm'>
     <div class="form-group">
       <label for="name">Quote:</label>
-      <textarea class="form-control" id="quote" rows="4" name="quote" required></textarea>
+      <textarea class="form-control" id="quote" rows="4" name="quote" [(ngModel)] ='newQuote.quote' required></textarea>
     </div>
     <div class="form-group">
       <label for="name">Author:</label>
-      <input type="text" class="form-control" id="author" name="author" required>
+      <input type="text" class="form-control" id="author" name="author" [(ngModel)] ='newQuote.author' required>
     </div>
     <div class="form-group">
       <label for="name">Submitted By:</label>
-      <input type="text" class="form-control" id="submittedBy" name="submittedBy" required>
+      <input type="text" class="form-control" id="submittedBy" name="submittedBy" [(ngModel)] ='newQuote.submittedBy' required>
     </div>
     <button type="submit" class="btn btn-success">Add Goal</button>
   </form>
