--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -6,10 +6,13 @@
   button {
     margin-right: 5%;
   }
+  #datePosted{
+    padding-top: 5%;
+  }
 
 </style>
 <div class="d-flex justify-content-between">
-  <div>-- {{quote.author}}</div>
+  <div><strong class="text-primary">-- {{quote.author}}</strong></div>
   <div class="btn-group">
     <button type="button" class="btn btn-outline-info d-flex">
       <div>{{quote.upvote}}</div>
@@ -32,11 +35,10 @@
   </div>
 
 </div>
-<div class="d-flex justify-content-between">
-  <div>
-    Posted by: {{quote.submittedBy}}
+<div class="d-flex justify-content-between" id="datePosted">
+  <div><i><b> Posted by:</b>
+    {{quote.submittedBy}}</i>   
   </div>
-  <div class="btn-group">
-    Date:
+  <div class="btn-group"><i><b>Date:</b> {{quote.datePosted|date}}</i>
   </div>
 </div>
