--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -19,7 +19,7 @@
 
 </style>
 <div class="form">
-  <h2>Add new Goal</h2>
+  <h2>Add New Quote</h2>
   <hr>
   <form #quotesForm='ngForm' (ngSubmit) ='submitQuote();quotesForm.resetForm({})'>
     <div class="form-group">
@@ -46,6 +46,6 @@
         <p>Your name is required</p>
       </div>
     </div>
-    <button type="submit" class="btn btn-success">Add Goal</button>
+    <button type="submit" class="btn btn-success">Add Quote</button>
   </form>
 </div>
