--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -27,7 +27,9 @@
         <app-quote-form (addQuote)='addNewQuote($event)'></app-quote-form>
       </div>
       <div class="col-md-7">
-        <div *ngFor='let quote of quotes' class="card shadow-lg p-3 mb-3 bg-body rounded">
+        <div *ngFor='let quote of quotes;' class="card shadow-lg p-3 mb-3 bg-body rounded">
+          <div></div>
+          <div>{{large}}</div>
           <p appHighlight>{{quote.quote}}</p>
           <app-quote-details [quote]='quote'></app-quote-details>
         </div>
