--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -8,19 +8,26 @@
   }
 
   #datePosted {
-    padding-top: 5%;
+    padding-top: 1%;
+    padding-bottom: 0%;
   }
 
   .dayCount {
     float: right;
   }
 
+  /* let quote of quotes; let i = index */
+  .icon {
+    border: none;
+    margin-right: 9%;
+  }
+
 </style>
 <div class="d-flex justify-content-between">
   <div><strong class="text-primary">-- {{quote.author}}</strong></div>
   <div class="btn-group">
-    <button (click)="upCount()" type="button" class="btn btn-outline-info d-flex">
-      <div>{{countUp}}</div>
+    <button (click)="upCount(quote)" type="button" class="btn btn-outline-info d-flex">
+      <div>{{quote.upvote}}</div>
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hand-thumbs-up"
         viewBox="0 0 16 16" value="">
         <path
@@ -28,8 +35,8 @@
         </path>
       </svg>
     </button>
-    <button (click)="downCount()" type="button" class="btn btn-outline-info d-flex">
-      <div>{{countDown}}</div>
+    <button (click)="downCount(quote)" type="button" class="btn btn-outline-info d-flex">
+      <div>{{quote.downvote}}</div>
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hand-thumbs-down"
         viewBox="0 0 16 16">
         <path
@@ -38,13 +45,27 @@
       </svg>
     </button>
   </div>
-
+</div>
+<div class="d-flex justify-content-between">
+  <p style="color: grey;">More...</p>
 </div>
 <div class="d-flex justify-content-between" id="datePosted">
-  <div><i><b> Posted by:</b>
-      {{quote.submittedBy}}</i>
+  <div>
+    <i>
+      <b> Posted {{quote.datePosted|dateCount}} days ago by:
+        <strong class="subBy">{{quote.submittedBy}}</strong>
+      </b>
+    </i>
   </div>
-  <div class="btn-group"><i><b>Date:</b> {{quote.datePosted|date}}</i>
+  <div class="icon btn btn-outline-danger" (click)='deleteQuote(true)'>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
+      viewBox="0 0 16 16">
+      <path
+        d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+      <path fill-rule="evenodd"
+        d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+    </svg>
   </div>
+  <!-- <div class="btn-group"><i><b>Date:</b> {{quote.datePosted|date}}</i> -->
+  <!-- </div> -->
 </div>
-<p class="dayCount"><i class="text-center">Posted {{quote.datePosted|dateCount}} days ago</i></p>
