--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -23,16 +23,18 @@
     <h1 class="text-center">My Quotes</h1>
     <hr>
     <div class="row">
+      <div class="col-md-7"> Largest no is {{large}}
+        <div *ngFor='let quote of quotes; let i = index;' class="card shadow-lg p-3 mb-3 bg-body rounded">
+          <!-- <div *ngIf='if quote.upvote !== large || quote.upvote ===0'>{{quote.quote}}</div>
+          <div *ngIf='quotes.upvote === large && quote.upvote > 0'>
+            <h5 appHighlight>{{ quote.quote}}</h5>
+          </div> -->
+          <h5 appHighlight>{{ quote.quote}}</h5>
+          <app-quote-details [quote]='quote' (isDeleted)='deleteQuote($event,i)'></app-quote-details>
+        </div>
+      </div>
       <div class="col-md-5">
         <app-quote-form (addQuote)='addNewQuote($event)'></app-quote-form>
-      </div>
-      <div class="col-md-7">
-        <div *ngFor='let quote of quotes;' class="card shadow-lg p-3 mb-3 bg-body rounded">
-          <div></div>
-          <div>{{large}}</div>
-          <p appHighlight>{{quote.quote}}</p>
-          <app-quote-details [quote]='quote'></app-quote-details>
-        </div>
       </div>
     </div>
   </div>
