--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -16,15 +16,17 @@
     float: right;
   }
 
-  /* let quote of quotes; let i = index */
   .icon {
     border: none;
     margin-right: 9%;
   }
+  .author{
+    color: chocolate;
+  }
 
 </style>
 <div class="d-flex justify-content-between">
-  <div><strong class="text-primary">-- {{quote.author}}</strong></div>
+  <div><strong class="author">-- {{quote.author}}</strong></div> 
   <div class="btn-group">
     <button (click)="upCount(quote)" type="button" class="btn btn-outline-info d-flex">
       <div>{{quote.upvote}}</div>
@@ -46,14 +48,11 @@
     </button>
   </div>
 </div>
-<div class="d-flex justify-content-between">
-  <p style="color: grey;">More...</p>
-</div>
 <div class="d-flex justify-content-between" id="datePosted">
   <div>
     <i>
       <b> Posted {{quote.datePosted|dateCount}} days ago by:
-        <strong class="subBy">{{quote.submittedBy}}</strong>
+        <strong>{{quote.submittedBy}}</strong>
       </b>
     </i>
   </div>
@@ -66,6 +65,5 @@
         d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
     </svg>
   </div>
-  <!-- <div class="btn-group"><i><b>Date:</b> {{quote.datePosted|date}}</i> -->
-  <!-- </div> -->
+  <!-- <div class="btn-group"><i><b>Date:</b> {{quote.datePosted|date}}</i>-- </div> -->
 </div>
