--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -14,12 +14,14 @@
 
   button {
     margin-top: 2%;
-
+    background-color: navy;
+    color: white;
   }
+
 
 </style>
 <div class="form">
-  <h2>Add New Quote</h2>
+  <h2 style="color: navy;">Add New Quote</h2>
   <hr>
   <form #quotesForm='ngForm' (ngSubmit) ='submitQuote();quotesForm.resetForm({})'>
     <div class="form-group">
@@ -46,6 +48,6 @@
         <p>Your name is required</p>
       </div>
     </div>
-    <button type="submit" class="btn btn-success">Add Quote</button>
+    <button type="submit" class="btn submit">Add Quote</button>
   </form>
 </div>
