--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,31 +1,8 @@
-<style>
-  .btn-group {
-    margin-right: 3%;
-  }
-
-  button {
-    margin-right: 5%;
-  }
-
-  #datePosted {
-    padding-top: 1%;
-    padding-bottom: 0%;
-  }
-
-  .dayCount {
-    float: right;
-  }
-
-  .icon {
-    margin-right: 9%;
-  }
-  .author{
-    color: chocolate;
-  }
-
-</style>
-<div class="d-flex justify-content-between">
-  <div><strong class="author">-- {{quote.author}}</strong></div> 
+<div class="d-flex justify-content-between details">
+  <div id="datePosted">
+    Posted {{quote.datePosted|dateCount}} days ago by:
+    <em>{{quote.submittedBy}}</em>
+  </div>
   <div class="btn-group">
     <button (click)="upCount(quote)" type="button" class="btn btn-outline-info d-flex">
       <div>{{quote.upvote}}</div>
@@ -54,15 +31,6 @@
           d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
       </svg>
     </div>
+    <!-- <div class="btn-group"><i><b>Date:</b> {{quote.datePosted|date}}</i>-- </div> -->
   </div>
-</div>
-<div class="d-flex justify-content-between" id="datePosted">
-  <div>
-    <i>
-      <b> Posted {{quote.datePosted|dateCount}} days ago by:
-        <strong>{{quote.submittedBy}}</strong>
-      </b>
-    </i>
-  </div>
-  <!-- <div class="btn-group"><i><b>Date:</b> {{quote.datePosted|date}}</i>-- </div> -->
 </div>
