--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,22 +1,4 @@
-<style>
-  .card {
-    padding: 20px;
-  }
 
-  main {
-    margin: 10%;
-    margin-top: 0%;
-  }
-
-  .col-md-7 {
-    padding: 6%;
-    padding-top: 1%;
-  }
-
-  .container>h1 {
-    padding: 2%;
-  }
-</style>
 <main>
   <div class="container">
     <h1 class="text-center" style="color: chocolate;">My Quotes</h1>
@@ -24,26 +6,19 @@
     <div class="row">
       <div class="col-md-7">
         <div *ngFor='let quote of quotes; let i = index;' class="card shadow-lg p-3 mb-3 bg-body rounded">
-          <!-- <div *ngIf='quote.upvote !== getMax() || quote.upvote === 0'>
-            <div id="myQuote">{{ quote.quote}}</div>
-          </div>
-          <div *ngIf='quote.upvote === getMax()'>
-            <div id="myQuote" appHighlight>{{ quote.quote}}</div>
-          </div> -->
-          <div id = {{i}}>
+          <div id={{i}}>
             <h5 *ngIf='quote.upvote !== getMax() || quote.upvote === 0'>{{ quote.quote }}.</h5>
             <div *ngIf='quote.upvote === getMax() && quote.upvote > 0'>
-                <h5 appHighlight>{{ quote.quote }}</h5>
+              <h5 appHighlight>{{ quote.quote }}</h5>
             </div>
           </div>
-          <div>
-            <p style="color: navy; font-size: 10pt; text-align: right; padding-right: 5%;" (click)='toggleDetails(i)'>More...</p>
+          <div class="d-flex justify-content-between">
+            <div><strong class="author">-- {{quote.author}}</strong></div>
+            <div style="color: navy; font-size: 10pt; padding-right: 5%;" (click)='toggleDetails(i)'>More...</div>
           </div>
           <app-quote-details [quote]='quote' (isDeleted)='deleteQuote($event,i)' *ngIf='quote.toggleContent'>
           </app-quote-details>
         </div>
-
-       
       </div>
       <div class="col-md-5">
         <app-quote-form (addQuote)='addNewQuote($event)'></app-quote-form>
